// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot › RenderFlash > renders with a custom className and style overrides 1`] = `
<div
  class="my-class"
  data-rg-flash="Styled"
  data-rg-renders="1"
  style="display: contents; border: 1px solid red; --rg-flash-color: #4ade80; animation: __rg_flash__ 400ms ease-out forwards;"
>
  styled
</div>
`;

exports[`Snapshot › RenderFlash > renders with a custom duration (attribute passthrough only) 1`] = `
<div
  data-rg-flash="Slow"
  data-rg-renders="1"
  style="display: contents; --rg-flash-color: #4ade80; animation: __rg_flash__ 800ms ease-out forwards;"
>
  slow
</div>
`;

exports[`Snapshot › RenderFlash > renders with a name and default display 1`] = `
<div
  data-rg-flash="MyWidget"
  data-rg-renders="1"
  style="display: contents; --rg-flash-color: #4ade80; animation: __rg_flash__ 400ms ease-out forwards;"
>
  <span>
    content
  </span>
</div>
`;

exports[`Snapshot › RenderFlash > renders with display='inline-block' 1`] = `
<div
  data-rg-flash="Inline"
  data-rg-renders="1"
  style="display: inline-block; --rg-flash-color: #4ade80; animation: __rg_flash__ 400ms ease-out forwards;"
>
  foo
</div>
`;

exports[`Snapshot › RenderFlash > renders without a name prop (data-rg-flash attribute omitted by React) 1`] = `
<div
  data-rg-renders="1"
  style="display: contents; --rg-flash-color: #4ade80; animation: __rg_flash__ 400ms ease-out forwards;"
>
  <span>
    anonymous
  </span>
</div>
`;

exports[`Snapshot › RenderOverlay > renders nothing (null) when renderCount is 0 1`] = `<div />`;

exports[`Snapshot › RenderOverlay > renders the visible overlay on the first render (fast — < 16 ms) 1`] = `
<div
  style="position: fixed; bottom: 20px; right: 20px; background-color: rgba(0, 0, 0, 0.85); color: rgb(255, 255, 255); padding: 12px; border-radius: 8px; font-family: monospace; font-size: 12px; z-index: 9999; box-shadow: 0 4px 12px rgba(0,0,0,0.3); min-width: 200px; border: 1px rgb(76, 175, 80); transition: border-color 0.3s ease;"
>
  <h4
    style="margin: 0px 0px 8px; font-size: 14px; font-weight: bold; border-bottom: 1px solid rgb(68, 68, 68); padding-bottom: 4px; display: flex; align-items: center;"
  >
    <span
      style="display: inline-block; width: 8px; height: 8px; border-radius: 50%; margin-right: 8px; background-color: rgb(76, 175, 80);"
    />
    RenderGuard
  </h4>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Last Render:
    </span>
    <span
      style="font-weight: bold; color: rgb(76, 175, 80);"
    >
      8.00
      ms
    </span>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Total Renders:
    </span>
    <span
      style="font-weight: bold;"
    >
      1
    </span>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Source:
    </span>
    <span
      style="font-weight: bold; max-width: 100px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
    >
      root
    </span>
  </div>
</div>
`;

exports[`Snapshot › RenderOverlay > renders with a long lastRenderId (truncated via CSS) 1`] = `
<div
  style="position: fixed; bottom: 20px; right: 20px; background-color: rgba(0, 0, 0, 0.85); color: rgb(255, 255, 255); padding: 12px; border-radius: 8px; font-family: monospace; font-size: 12px; z-index: 9999; box-shadow: 0 4px 12px rgba(0,0,0,0.3); min-width: 200px; border: 1px rgb(76, 175, 80); transition: border-color 0.3s ease;"
>
  <h4
    style="margin: 0px 0px 8px; font-size: 14px; font-weight: bold; border-bottom: 1px solid rgb(68, 68, 68); padding-bottom: 4px; display: flex; align-items: center;"
  >
    <span
      style="display: inline-block; width: 8px; height: 8px; border-radius: 50%; margin-right: 8px; background-color: rgb(76, 175, 80);"
    />
    RenderGuard
  </h4>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Last Render:
    </span>
    <span
      style="font-weight: bold; color: rgb(76, 175, 80);"
    >
      5.00
      ms
    </span>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Total Renders:
    </span>
    <span
      style="font-weight: bold;"
    >
      3
    </span>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Source:
    </span>
    <span
      style="font-weight: bold; max-width: 100px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
    >
      VeryLongComponentNameThatShouldTruncate
    </span>
  </div>
</div>
`;

exports[`Snapshot › RenderOverlay > renders with a moderate render time (16 – 50 ms → orange) 1`] = `
<div
  style="position: fixed; bottom: 20px; right: 20px; background-color: rgba(0, 0, 0, 0.85); color: rgb(255, 255, 255); padding: 12px; border-radius: 8px; font-family: monospace; font-size: 12px; z-index: 9999; box-shadow: 0 4px 12px rgba(0,0,0,0.3); min-width: 200px; border: 1px rgb(255, 152, 0); transition: border-color 0.3s ease;"
>
  <h4
    style="margin: 0px 0px 8px; font-size: 14px; font-weight: bold; border-bottom: 1px solid rgb(68, 68, 68); padding-bottom: 4px; display: flex; align-items: center;"
  >
    <span
      style="display: inline-block; width: 8px; height: 8px; border-radius: 50%; margin-right: 8px; background-color: rgb(255, 152, 0);"
    />
    RenderGuard
  </h4>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Last Render:
    </span>
    <span
      style="font-weight: bold; color: rgb(255, 152, 0);"
    >
      32.00
      ms
    </span>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Total Renders:
    </span>
    <span
      style="font-weight: bold;"
    >
      1
    </span>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Source:
    </span>
    <span
      style="font-weight: bold; max-width: 100px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
    >
      root
    </span>
  </div>
</div>
`;

exports[`Snapshot › RenderOverlay > renders with a slow render time (> 50 ms → red) 1`] = `
<div
  style="position: fixed; bottom: 20px; right: 20px; background-color: rgba(0, 0, 0, 0.85); color: rgb(255, 255, 255); padding: 12px; border-radius: 8px; font-family: monospace; font-size: 12px; z-index: 9999; box-shadow: 0 4px 12px rgba(0,0,0,0.3); min-width: 200px; border: 1px rgb(244, 67, 54); transition: border-color 0.3s ease;"
>
  <h4
    style="margin: 0px 0px 8px; font-size: 14px; font-weight: bold; border-bottom: 1px solid rgb(68, 68, 68); padding-bottom: 4px; display: flex; align-items: center;"
  >
    <span
      style="display: inline-block; width: 8px; height: 8px; border-radius: 50%; margin-right: 8px; background-color: rgb(244, 67, 54);"
    />
    RenderGuard
  </h4>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Last Render:
    </span>
    <span
      style="font-weight: bold; color: rgb(244, 67, 54);"
    >
      75.00
      ms
    </span>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Total Renders:
    </span>
    <span
      style="font-weight: bold;"
    >
      1
    </span>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Source:
    </span>
    <span
      style="font-weight: bold; max-width: 100px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
    >
      root
    </span>
  </div>
</div>
`;

exports[`Snapshot › RenderOverlay > snapshot after flash timeout clears (border back to #333) 1`] = `
<div
  style="position: fixed; bottom: 20px; right: 20px; background-color: rgba(0, 0, 0, 0.85); color: rgb(255, 255, 255); padding: 12px; border-radius: 8px; font-family: monospace; font-size: 12px; z-index: 9999; box-shadow: 0 4px 12px rgba(0,0,0,0.3); min-width: 200px; border: 1px rgb(51, 51, 51); transition: border-color 0.3s ease;"
>
  <h4
    style="margin: 0px 0px 8px; font-size: 14px; font-weight: bold; border-bottom: 1px solid rgb(68, 68, 68); padding-bottom: 4px; display: flex; align-items: center;"
  >
    <span
      style="display: inline-block; width: 8px; height: 8px; border-radius: 50%; margin-right: 8px; background-color: rgb(76, 175, 80);"
    />
    RenderGuard
  </h4>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Last Render:
    </span>
    <span
      style="font-weight: bold; color: rgb(76, 175, 80);"
    >
      10.00
      ms
    </span>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Total Renders:
    </span>
    <span
      style="font-weight: bold;"
    >
      1
    </span>
  </div>
  <div
    style="display: flex; justify-content: space-between; margin-bottom: 4px;"
  >
    <span
      style="color: rgb(170, 170, 170);"
    >
      Source:
    </span>
    <span
      style="font-weight: bold; max-width: 100px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
    >
      root
    </span>
  </div>
</div>
`;

exports[`Snapshot › withRenderFlash > accepts a custom duration option 1`] = `
<div
  data-rg-flash="SlowButton"
  data-rg-renders="1"
  style="display: contents; --rg-flash-color: #4ade80; animation: __rg_flash__ 800ms ease-out forwards;"
>
  <button
    type="button"
  >
    slow
  </button>
</div>
`;

exports[`Snapshot › withRenderFlash > accepts an explicit displayName argument 1`] = `
<div
  data-rg-flash="PrimaryButton"
  data-rg-renders="1"
  style="display: contents; --rg-flash-color: #4ade80; animation: __rg_flash__ 400ms ease-out forwards;"
>
  <button
    type="button"
  >
    primary
  </button>
</div>
`;

exports[`Snapshot › withRenderFlash > wraps a named component — wrapper div has data-rg-flash 1`] = `
<div
  data-rg-flash="Button"
  data-rg-renders="1"
  style="display: contents; --rg-flash-color: #4ade80; animation: __rg_flash__ 400ms ease-out forwards;"
>
  <button
    type="button"
  >
    click me
  </button>
</div>
`;
